tests/paczka1/fuzzy1/87233207.err
Error in line 4: qzwDs34l S196 96,4
Error in line 1: owxQLg A342 45,2
Error in line 14: owxQLg S196 73,6
Error in line 22: i8Q A955 -2,5
Error in line 15: owxQLg A342 39,7
Error in line 29: NNjdQr S82 66,4
